# medical-visualization

./: CMakeLists.txt  CMakeUserPresets.json  README.md
src/: mainwindow.cpp  mainwindow.ui
src/pandemic_sim/: crowdSim.cpp
src/slice_viewer/: sliceviewerwidget.cpp  volumedata.h  volumedatawidget.ui
src/volume_rendering/: transferfunctionwidget.cpp  volumerenderer.cpp  volumerendererwidget.ui
